--- a/img/index.html
+++ b/img/index.html
@@ -1,36 +1,35 @@
-<a href="20160509_142500.jpg">20160509_142500.jpg</a>
-<a href="20160509_142510.jpg">20160509_142510.jpg</a>
-<a href="20160509_142517.jpg">20160509_142517.jpg</a>
-<a href="20160509_142635.jpg">20160509_142635.jpg</a>
-<a href="20160509_142644.jpg">20160509_142644.jpg</a>
-<a href="20160509_142718.jpg">20160509_142718.jpg</a>
-<a href="20160509_142755.jpg">20160509_142755.jpg</a>
-<a href="20160509_142757.jpg">20160509_142757.jpg</a>
-<a href="20160509_142810.jpg">20160509_142810.jpg</a>
-<a href="20160529_135002.jpg">20160529_135002.jpg</a>
-<a href="20160529_135006.jpg">20160529_135006.jpg</a>
-<a href="20160529_135038.jpg">20160529_135038.jpg</a>
-<a href="20160529_135412.jpg">20160529_135412.jpg</a>
-<a href="20160529_135429.jpg">20160529_135429.jpg</a>
-<a href="20160529_135622.jpg">20160529_135622.jpg</a>
-<a href="20160529_135707.jpg">20160529_135707.jpg</a>
-<a href="20160529_135939.jpg">20160529_135939.jpg</a>
-<a href="20160529_140633.jpg">20160529_140633.jpg</a>
-<a href="20160529_141419.jpg">20160529_141419.jpg</a>
-<a href="20160529_141436.jpg">20160529_141436.jpg</a>
-<a href="20160529_143622.jpg">20160529_143622.jpg</a>
-<a href="20160530_115034.jpg">20160530_115034.jpg</a>
-<a href="20160530_115040.jpg">20160530_115040.jpg</a>
-<a href="20160530_120029.jpg">20160530_120029.jpg</a>
-<a href="20160530_184029.jpg">20160530_184029.jpg</a>
-<a href="20160530_185605.jpg">20160530_185605.jpg</a>
-<a href="20160530_185928.jpg">20160530_185928.jpg</a>
-<a href="20160530_185929.jpg">20160530_185929.jpg</a>
-<a href="buildIndex.sh">buildIndex.sh</a>
-<a href="buildIndex.sh~">buildIndex.sh~</a>
-<a href="class-10.jpg">class-10.jpg</a>
-<a href="index.html">index.html</a>
-<a href="micro-sd.jpg">micro-sd.jpg</a>
-<a href="naked-solo-on-table.jpg">naked-solo-on-table.jpg</a>
-<a href="solo-logo.png">solo-logo.png</a>
-<a href="uhs-class-1.jpg">uhs-class-1.jpg</a>
+<a href="20160509_142500.jpg">20160509_142500.jpg</a><br>
+<a href="20160509_142510.jpg">20160509_142510.jpg</a><br>
+<a href="20160509_142517.jpg">20160509_142517.jpg</a><br>
+<a href="20160509_142635.jpg">20160509_142635.jpg</a><br>
+<a href="20160509_142644.jpg">20160509_142644.jpg</a><br>
+<a href="20160509_142718.jpg">20160509_142718.jpg</a><br>
+<a href="20160509_142755.jpg">20160509_142755.jpg</a><br>
+<a href="20160509_142757.jpg">20160509_142757.jpg</a><br>
+<a href="20160509_142810.jpg">20160509_142810.jpg</a><br>
+<a href="20160529_135002.jpg">20160529_135002.jpg</a><br>
+<a href="20160529_135006.jpg">20160529_135006.jpg</a><br>
+<a href="20160529_135038.jpg">20160529_135038.jpg</a><br>
+<a href="20160529_135412.jpg">20160529_135412.jpg</a><br>
+<a href="20160529_135429.jpg">20160529_135429.jpg</a><br>
+<a href="20160529_135622.jpg">20160529_135622.jpg</a><br>
+<a href="20160529_135707.jpg">20160529_135707.jpg</a><br>
+<a href="20160529_135939.jpg">20160529_135939.jpg</a><br>
+<a href="20160529_140633.jpg">20160529_140633.jpg</a><br>
+<a href="20160529_141419.jpg">20160529_141419.jpg</a><br>
+<a href="20160529_141436.jpg">20160529_141436.jpg</a><br>
+<a href="20160529_143622.jpg">20160529_143622.jpg</a><br>
+<a href="20160530_115034.jpg">20160530_115034.jpg</a><br>
+<a href="20160530_115040.jpg">20160530_115040.jpg</a><br>
+<a href="20160530_120029.jpg">20160530_120029.jpg</a><br>
+<a href="20160530_184029.jpg">20160530_184029.jpg</a><br>
+<a href="20160530_185605.jpg">20160530_185605.jpg</a><br>
+<a href="20160530_185928.jpg">20160530_185928.jpg</a><br>
+<a href="20160530_185929.jpg">20160530_185929.jpg</a><br>
+<a href="buildIndex.sh">buildIndex.sh</a><br>
+<a href="class-10.jpg">class-10.jpg</a><br>
+<a href="index.html">index.html</a><br>
+<a href="micro-sd.jpg">micro-sd.jpg</a><br>
+<a href="naked-solo-on-table.jpg">naked-solo-on-table.jpg</a><br>
+<a href="solo-logo.png">solo-logo.png</a><br>
+<a href="uhs-class-1.jpg">uhs-class-1.jpg</a><br>
