--- a/img/index.html
+++ b/img/index.html
@@ -26,6 +26,7 @@
 <a href="20160530_185605.jpg">20160530_185605.jpg</a><br>
 <a href="20160530_185928.jpg">20160530_185928.jpg</a><br>
 <a href="20160530_185929.jpg">20160530_185929.jpg</a><br>
+<a href="bigindex.html">bigindex.html</a><br>
 <a href="buildIndex.sh">buildIndex.sh</a><br>
 <a href="class-10.jpg">class-10.jpg</a><br>
 <a href="index.html">index.html</a><br>
