--- a/img/bigindex.html
+++ b/img/bigindex.html
@@ -29,9 +29,14 @@
 <a href="20160530_185929.jpg"> <img src="20160530_185929.jpg" height=200px></img> </a><br>
 <a href="bigindex.html"> <img src="bigindex.html" height=200px></img> </a><br>
 <a href="buildIndex.sh"> <img src="buildIndex.sh" height=200px></img> </a><br>
+<a href="car-battery-dcdc-8x6.jpg"> <img src="car-battery-dcdc-8x6.jpg" height=200px></img> </a><br>
+<a href="car-solo-cigar-8x6.jpg"> <img src="car-solo-cigar-8x6.jpg" height=200px></img> </a><br>
 <a href="class-10.jpg"> <img src="class-10.jpg" height=200px></img> </a><br>
+<a href="dcdc-8x6.jpg"> <img src="dcdc-8x6.jpg" height=200px></img> </a><br>
 <a href="index.html"> <img src="index.html" height=200px></img> </a><br>
 <a href="micro-sd.jpg"> <img src="micro-sd.jpg" height=200px></img> </a><br>
 <a href="naked-solo-on-table.jpg"> <img src="naked-solo-on-table.jpg" height=200px></img> </a><br>
+<a href="solo-car-dcdc-8x6.jpg"> <img src="solo-car-dcdc-8x6.jpg" height=200px></img> </a><br>
 <a href="solo-logo.png"> <img src="solo-logo.png" height=200px></img> </a><br>
+<a href="solo-naked-powerbank-8x6.jpg"> <img src="solo-naked-powerbank-8x6.jpg" height=200px></img> </a><br>
 <a href="uhs-class-1.jpg"> <img src="uhs-class-1.jpg" height=200px></img> </a><br>
