--- a/img/index.html
+++ b/img/index.html
@@ -28,9 +28,14 @@
 <a href="20160530_185929.jpg">20160530_185929.jpg</a><br>
 <a href="bigindex.html">bigindex.html</a><br>
 <a href="buildIndex.sh">buildIndex.sh</a><br>
+<a href="car-battery-dcdc-8x6.jpg">car-battery-dcdc-8x6.jpg</a><br>
+<a href="car-solo-cigar-8x6.jpg">car-solo-cigar-8x6.jpg</a><br>
 <a href="class-10.jpg">class-10.jpg</a><br>
+<a href="dcdc-8x6.jpg">dcdc-8x6.jpg</a><br>
 <a href="index.html">index.html</a><br>
 <a href="micro-sd.jpg">micro-sd.jpg</a><br>
 <a href="naked-solo-on-table.jpg">naked-solo-on-table.jpg</a><br>
+<a href="solo-car-dcdc-8x6.jpg">solo-car-dcdc-8x6.jpg</a><br>
 <a href="solo-logo.png">solo-logo.png</a><br>
+<a href="solo-naked-powerbank-8x6.jpg">solo-naked-powerbank-8x6.jpg</a><br>
 <a href="uhs-class-1.jpg">uhs-class-1.jpg</a><br>
