added photo of sdcard extension cable

--- a/img/bigindex.html
+++ b/img/bigindex.html
@@ -36,8 +36,10 @@
 <a href="index.html"> <img src="index.html" height=200px></img> </a><br>
 <a href="micro-sd.jpg"> <img src="micro-sd.jpg" height=200px></img> </a><br>
 <a href="naked-solo-on-table.jpg"> <img src="naked-solo-on-table.jpg" height=200px></img> </a><br>
+<a href="sdcard-extension-cable.jpg"> <img src="sdcard-extension-cable.jpg" height=200px></img> </a><br>
 <a href="solo-boxed.jpg"> <img src="solo-boxed.jpg" height=200px></img> </a><br>
 <a href="solo-car-dcdc-8x6.jpg"> <img src="solo-car-dcdc-8x6.jpg" height=200px></img> </a><br>
 <a href="solo-logo.png"> <img src="solo-logo.png" height=200px></img> </a><br>
 <a href="solo-naked-powerbank-8x6.jpg"> <img src="solo-naked-powerbank-8x6.jpg" height=200px></img> </a><br>
+<a href="SOLO Windows Putty.jpg"> <img src="SOLO Windows Putty.jpg" height=200px></img> </a><br>
 <a href="uhs-class-1.jpg"> <img src="uhs-class-1.jpg" height=200px></img> </a><br>
