--- a/img/index.html
+++ b/img/index.html
@@ -35,8 +35,10 @@
 <a href="index.html">index.html</a><br>
 <a href="micro-sd.jpg">micro-sd.jpg</a><br>
 <a href="naked-solo-on-table.jpg">naked-solo-on-table.jpg</a><br>
+<a href="sdcard-extension-cable.jpg">sdcard-extension-cable.jpg</a><br>
 <a href="solo-boxed.jpg">solo-boxed.jpg</a><br>
 <a href="solo-car-dcdc-8x6.jpg">solo-car-dcdc-8x6.jpg</a><br>
 <a href="solo-logo.png">solo-logo.png</a><br>
 <a href="solo-naked-powerbank-8x6.jpg">solo-naked-powerbank-8x6.jpg</a><br>
+<a href="SOLO Windows Putty.jpg">SOLO Windows Putty.jpg</a><br>
 <a href="uhs-class-1.jpg">uhs-class-1.jpg</a><br>
